k8-demo/istio/canary-test/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata: {name: hello}
spec:
  host: hello.mesh-demo.svc.cluster.local
  subsets:
  - name: v1
    labels: {version: v1}
  - name: v2
    labels: {version: v2}
