k8-demo/istio/canary-test/vs-80-20.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata: {name: hello-edge}
spec:
  hosts: ["*"]
  gateways: [hello-gw]
  http:
  - match: [{uri: {prefix: "/hello"}}]
    rewrite: {uri: "/"}
    route:
    - destination: {host: hello.mesh-demo.svc.cluster.local, subset: v1}
      weight: 80
    - destination: {host: hello.mesh-demo.svc.cluster.local, subset: v2}
      weight: 20
